fix name styling

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
   <!-- Contact Section -->
   <section id="contact" class="py-16 px-6 max-w-4xl mx-auto">
     <h2 class="text-3xl font-bold mb-8 text-center">Contact Me</h2>
-    <form action="https://domainaces.app.n8n.cloud/form-test/ffe8ef9d-0b8c-4778-8e49-e830a9d4ebf0" method="POST" class="grid gap-nt-medium mb-1">Name</label>
+    <form action="https://domainaces.app.n8n.cloud/form-test/ffe8ef9d-0b8c-4778-8e49-e830a9d4ebf0" method="POST" class="grid gap-nt-medium mb-1">
+      <label for="phone" class="block font-medium mb-1">Name</label>
     <input type="text" id="name" name="name" required class="w-full border border-gray-300 rounded px-4 py-2" />
   </div>
   <div>
