--- a/index.html
+++ b/index.html
@@ -58,26 +58,30 @@
   <!-- Contact Section -->
   <section id="contact" class="py-16 px-6 max-w-4xl mx-auto">
     <h2 class="text-3xl font-bold mb-8 text-center">Contact Me</h2>
-    <form action="https://domainaces.app.n8n.cloud/form-test/ffe8ef9d-0b8c-4778-8e49-e830a9d4ebf0" method="POST" class="grid gap-nt-medium mb-1">
-      <label for="phone" class="block font-medium mb-1">Name</label>
-    <input type="text" id="name" name="name" required class="w-full border border-gray-300 rounded px-4 py-2" />
+    <form action="https://domainaces.app.n8n.cloud/form-test/form-test" method="POSTst-name" class="block font-medium mb-1">
+      <label for="first-name" class="block font-medium mb-1"></label>First Name</label>
+    <input type="text" id="first-name" name="First Name" required class="w-full border border-gray-300 rounded px-4 py-2" />
   </div>
   <div>
-    <label for="phone" class="block font-medium mb-1">Phone</label>
-    <input type="tel" id="phone" name="phone" class="w-full border border-gray-300 rounded px-4 py-2" />
+    <label for="last-name" class="block font-medium mb-1">Last Name</label>
+    <input type="text" id="last-name" name="Last Name" required class="w-full border border-gray-300 rounded px-4 py-2" />
   </div>
   <div>
-    <label for="email" class="block font-medium mb-1">Email</label>
-    <input type="email" id="email" name="email" required class="w-full border border-gray-300 rounded px-4 py-2" />
+    <label for="email" class="block font-medium mb-1">Email Address</label>
+    <input type="email" id="email" name="Email Address" required class="w-full border border-gray-300 rounded px-4 py-2" />
   </div>
   <div>
+    <label for="phone" class="block font-medium mb-1">Phone Number</label>
+    <input type="tel" id="phone" name="Phone Number" class="w-full border border-gray-300 rounded px-4 py-2" />
+  </div>
+  
+<div>
     <label for="message" class="block font-medium mb-1">Message</label>
-    <textarea id="message" name="message" rows="5" required class="w-full border border-gray-300 rounded px-4 py-2"></textarea>
+    <textarea id="message" name="Message" rows="5" required class="w-full border border-gray-300 rounded px-4 py-2"></textarea>
   </div>
   <button type="submit" class="bg-blue-600 text-white font-semibold px-6 py-3 rounded hover:bg-blue-700 transition">Send Message</button>
 </form>
   </section>
-
   <!-- Footer -->
   <footer class="bg-gray-800 text-white text-center py-6 mt-16">
     <p>&copy; 2025 Prince Edobor. All rights reserved.</p>
