--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- Contact Section -->
   <section id="contact" class="py-16 px-6 max-w-4xl mx-auto">
     <h2 class="text-3xl font-bold mb-8 text-center">Contact Me</h2>
-    <form action="https://domainaces.app.n8n.cloud/webhook-test/form-test" method="POSTst-name" class="block font-medium mb-1">
+    <form action="https://domainaces.app.n8n.cloud/webhook-test/form-test" method="POST" class="block font-medium mb-1">
       <label for="first-name" class="block font-medium mb-1"></label>First Name</label>
     <input type="text" id="first-name" name="First Name" required class="w-full border border-gray-300 rounded px-4 py-2" />
   </div>
