phone number validation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-XXXXXXXXXX');
+
+    
+document.querySelector("form").addEventListener("submit", function (e) {
+    const phoneInput = document.getElementById("phone");
+    const errorMsg = document.getElementById("phone-error");
+    const phoneValue = phoneInput.value.trim();
+
+    // Regex for flexible phone formats
+    const phoneRegex = /^(\+?\d{1,2}\s?)?(\(?\d{3}\)?[\s.-]?)?\d{3}[\s.-]?\d{4}$/;
+
+    if (!phoneRegex.test(phoneValue)) {
+      e.preventDefault(); // Stop form submission
+      errorMsg.classList.remove("hidden");
+      phoneInput.classList.add("border-red-500");
+    } else {
+      errorMsg.classList.add("hidden");
+      phoneInput.classList.remove("border-red-500");
+    }
+  });
+
   </script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -70,10 +90,22 @@
     <label for="email" class="block font-medium mb-1">Email Address</label>
     <input type="email" id="email" name="Email Address" required class="w-full border border-gray-300 rounded px-4 py-2" />
   </div>
-  <div>
-    <label for="phone" class="block font-medium mb-1">Phone Number</label>
-    <input type="tel" id="phone" name="Phone Number" class="w-full border border-gray-300 rounded px-4 py-2" />
-  </div>
+  
+
+<div>
+  <label for="phone" class="block font-medium mb-1">Phone Number</label>
+  <input
+    type="tel"
+    id="phone"
+    name="Phone Number"
+    required
+    class="w-full border border-gray-300 rounded px-4 py-2"
+    placeholder="e.g., (587) 500-6714"
+  />
+  <p id="phone-error" class="text-red-600 text-sm mt-1 hidden">Please enter a valid phone number.</p>
+</div>
+
+
   
 <div>
     <label for="message" class="block font-medium mb-1">Message</label>
