--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-XXXXXXXXXX');
-
-    
+  </script>
+  <script>
 document.querySelector("form").addEventListener("submit", function (e) {
     const phoneInput = document.getElementById("phone");
     const errorMsg = document.getElementById("phone-error");
@@ -33,8 +33,7 @@ document.querySelector("form").addEventListener("submit", function (e) {
       phoneInput.classList.remove("border-red-500");
     }
   });
-
-  </script>
+</script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white text-gray-800 font-sans">
@@ -100,12 +99,10 @@ document.querySelector("form").addEventListener("submit", function (e) {
     name="Phone Number"
     required
     class="w-full border border-gray-300 rounded px-4 py-2"
-    placeholder="e.g., (587) 500-6714"
+    placeholder="e.g., (xxx) xxx-xxxx"
   />
   <p id="phone-error" class="text-red-600 text-sm mt-1 hidden">Please enter a valid phone number.</p>
 </div>
-
-
   
 <div>
     <label for="message" class="block font-medium mb-1">Message</label>
